Removed scrollspy + commented on mobile vh issue fix

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -3,7 +3,7 @@
 /* ============================================= */
 
 .hero-wrapper {
-    // height: 100vh;
+    height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     display: flex;
     flex-direction: column;
